Added JWT Authentication - backend

--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -1,8 +1,23 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid #3498db;
+  -webkit-text-fill-color: #3498db;
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
 
 .register-title {
   font-size: 1.8rem;
   margin-bottom: 20px;
+  color: white;
 }
 .register-container {
   font-family: "Montserrat", sans-serif;
@@ -12,11 +27,12 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+  background: #34495e;
 }
 
 .register-card {
   padding: 20px;
-  width: 500px;
+  width: 400px;
   background: #ecf0f1;
 }
 
@@ -47,6 +63,7 @@
 
 .register-signup {
   margin-top: 20px;
+  color: white;
 }
 
 /* MOBILE */
