Added typing events

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -71,3 +71,12 @@
   text-align: end;
   font-size: small;
 }
+
+#status-box {
+  padding: 10px;
+  position: fixed;
+  bottom: 6vh;
+  left: 10px;
+  font-style: italic;
+  width: 100%;
+}
